--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "mongoose": "^4.4.20",
     "mongoose-friends": "^0.2.3",
     "morgan": "~1.6.1",
+    "multer": "^1.2.0",
     "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "q": "^1.4.1",
     "sendgrid": "^3.0.8",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.6",
